(library
 (name grid)
 (modules grid)
 (libraries core yojson)
 (preprocess
  (pps ppx_jane bisect_ppx ppx_deriving_yojson)))

(library
 (name board)
 (modules board)
 (libraries core yojson grid)
 (preprocess
  (pps ppx_jane bisect_ppx ppx_deriving_yojson)))

(library
 (name hint)
 (modules hint)
 (libraries core yojson grid board)
 (preprocess
  (pps ppx_jane bisect_ppx ppx_deriving_yojson)))

(library
 (name game)
 (modules game)
 (libraries core yojson board hint)
 (preprocess
  (pps ppx_jane ppx_deriving_yojson)))

(library
 (name iolib)
 (modules iolib)
 (libraries core yojson core_unix board core_unix.sys_unix)
 (preprocess
  (pps ppx_jane ppx_deriving_yojson)))

(executable
 (name sudoku)
 (public_name "Sudoku CLI")
 (package cli)
 (modules sudoku)
 (libraries grid board core game iolib core_unix.command_unix)
 (preprocess
  (pps ppx_jane)))
